// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input.Password /> Snapshots should match when input is focused 1`] = `
<View
  full={false}
  style={
    [
      {
        "position": "relative",
        "width": 320,
      },
    ]
  }
>
  <View
    full={false}
    style={
      [
        {
          "position": "relative",
          "width": 320,
        },
        {},
      ]
    }
  >
    <TextInput
      autoCompleteType="password"
      blurOnSubmit={false}
      cleanable={false}
      clearTextOnFocus={false}
      disabled={false}
      editable={true}
      focus={true}
      full={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "borderColor": "#231B22",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 52,
            "lineHeight": 20,
            "minHeight": 52,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 52,
            "paddingTop": 14,
            "width": 320,
          },
          {
            "height": 52,
          },
        ]
      }
      testID="input"
      textContentType="password"
      typed={false}
      value=""
    />
    <View
      collapsable={false}
      focus={true}
      pointerEvents="none"
      style={
        {
          "left": 14,
          "position": "absolute",
          "top": 24,
          "transform": [
            {
              "translateY": -8,
            },
          ],
        }
      }
      typed={false}
    >
      <Text
        collapsable={false}
        disabled={false}
        focus={true}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "color": "#231B22",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
            "paddingLeft": 4,
            "paddingRight": 4,
          }
        }
        typed={false}
      >
        Input
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "paddingLeft": 8,
          "paddingRight": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={52}
      bbWidth={20}
      fill="#231B22"
      focusable={false}
      height={52}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          {
            "opacity": 1,
          },
          {
            "flex": 0,
            "height": 52,
            "width": 20,
          },
        ]
      }
      width={20}
    >
      <RNSVGGroup
        fill={
          [
            0,
            4280490786,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={{}}
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`<Input.Password /> Snapshots should match with default input 1`] = `
<View
  full={false}
  style={
    [
      {
        "position": "relative",
        "width": 320,
      },
    ]
  }
>
  <View
    full={false}
    style={
      [
        {
          "position": "relative",
          "width": 320,
        },
        {},
      ]
    }
  >
    <TextInput
      autoCompleteType="password"
      blurOnSubmit={false}
      cleanable={false}
      clearTextOnFocus={false}
      disabled={false}
      editable={true}
      focus={false}
      full={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "borderColor": "#D7D7E0",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#6B6B78",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 52,
            "lineHeight": 20,
            "minHeight": 52,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 52,
            "paddingTop": 14,
            "width": 320,
          },
          {
            "height": 52,
          },
        ]
      }
      textContentType="password"
      typed={false}
      value=""
    />
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "paddingLeft": 8,
          "paddingRight": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={52}
      bbWidth={20}
      fill="#6B6B78"
      focusable={false}
      height={52}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          {
            "opacity": 1,
          },
          {
            "flex": 0,
            "height": 52,
            "width": 20,
          },
        ]
      }
      width={20}
    >
      <RNSVGGroup
        fill={
          [
            0,
            4285229944,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={{}}
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`<Input.Password /> Snapshots should match with disabled input 1`] = `
<View
  full={false}
  style={
    [
      {
        "position": "relative",
        "width": 320,
      },
    ]
  }
>
  <View
    full={false}
    style={
      [
        {
          "position": "relative",
          "width": 320,
        },
        {},
      ]
    }
  >
    <TextInput
      autoCompleteType="password"
      blurOnSubmit={false}
      cleanable={false}
      clearTextOnFocus={false}
      disabled={true}
      editable={false}
      focus={false}
      full={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "borderColor": "#D7D7E0",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#D7D7E0",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 52,
            "lineHeight": 20,
            "minHeight": 52,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 52,
            "paddingTop": 14,
            "width": 320,
          },
          {
            "height": 52,
          },
        ]
      }
      textContentType="password"
      typed={false}
      value=""
    />
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "paddingLeft": 8,
          "paddingRight": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={52}
      bbWidth={20}
      fill="#F5F5FA"
      focusable={false}
      height={52}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          {
            "opacity": 1,
          },
          {
            "flex": 0,
            "height": 52,
            "width": 20,
          },
        ]
      }
      width={20}
    >
      <RNSVGGroup
        fill={
          [
            0,
            4294309370,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={{}}
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`<Input.Password /> Snapshots should match with full width 1`] = `
<View
  full={true}
  style={
    [
      {
        "position": "relative",
        "width": "100%",
      },
    ]
  }
>
  <View
    full={true}
    style={
      [
        {
          "position": "relative",
          "width": "100%",
        },
        {},
      ]
    }
  >
    <TextInput
      autoCompleteType="password"
      blurOnSubmit={false}
      cleanable={false}
      clearTextOnFocus={false}
      disabled={false}
      editable={true}
      focus={false}
      full={true}
      onBlur={[Function]}
      onFocus={[Function]}
      onSubmitEditing={[Function]}
      secureTextEntry={true}
      style={
        [
          {
            "borderColor": "#D7D7E0",
            "borderRadius": 8,
            "borderStyle": "solid",
            "borderWidth": 1,
            "color": "#6B6B78",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "height": 52,
            "lineHeight": 20,
            "minHeight": 52,
            "paddingBottom": 14,
            "paddingLeft": 16,
            "paddingRight": 52,
            "paddingTop": 14,
            "width": "100%",
          },
          {
            "height": 52,
          },
        ]
      }
      textContentType="password"
      typed={false}
      value=""
    />
    <View
      collapsable={false}
      focus={false}
      pointerEvents="none"
      style={
        {
          "left": 16,
          "position": "absolute",
          "top": 24,
          "transform": [
            {
              "translateY": -8,
            },
          ],
        }
      }
      typed={false}
    >
      <Text
        collapsable={false}
        disabled={false}
        focus={false}
        style={
          {
            "backgroundColor": "#FFFFFF",
            "color": "#6B6B78",
            "fontFamily": "Rubik",
            "fontSize": 14,
            "fontWeight": "400",
            "lineHeight": 20,
          }
        }
        typed={false}
      >
        Label
      </Text>
    </View>
  </View>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessible={true}
    disabled={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "paddingLeft": 8,
          "paddingRight": 16,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={52}
      bbWidth={20}
      fill="#6B6B78"
      focusable={false}
      height={52}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          undefined,
          {
            "opacity": 1,
          },
          {
            "flex": 0,
            "height": 52,
            "width": 20,
          },
        ]
      }
      width={20}
    >
      <RNSVGGroup
        fill={
          [
            0,
            4285229944,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        font={{}}
        matrix={
          [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGSvgView>
  </View>
</View>
`;
